--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>CV Hillary Reina Cen</h1>
+        <nav>
+            <div class="Logo">CV Hillary Reina Cen</div>
+            <ul>
+                <li><a href="#">Beranda</a></li>
+                <li><a href="#">Tentang</a></li>
+                <li><a href="#">Hubungi Saya</a></li>
+            </ul>
+        </nav>
     </header>
     <main> 
         <h1>Riwayat Pendidikan</h1>
         <h1>Pengalaman Organisasi</h1>
         <h1>Skills</h1>
         <h1>Bahasa</h1>
-        
     </main>
     <footer> </footer>
 </body>
